# frida-go-demo

./: .gitignore  Cargo.toml  README.md  frida-demo  go.mod
cgo_program/: frida_intercept_go_call.js  main.go
config/: Cargo.toml
config/src/: lib.rs
frida-injector/: Cargo.toml
frida-injector/src/: main.rs
frida-lib-to-inject/: Cargo.toml
frida-lib-to-inject/src/: lib.rs
go_program/: .gitignore
