[workspace]
members = ["frida-injector", "frida-lib-to-inject", "config"]
resolver = "2"

[workspace.dependencies]
frida = { version = "0.4.4", default-features = false }
frida-gum = { version = "0.13.4", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
clap = { version = "4.5.4", default-features = false }
serde = { version = "1.0.199", default-features = false }
serde_json = { version = "1.0.116", default-features = false }
